[gd_scene load_steps=12 format=3 uid="uid://dlqk140sx0442"]

[ext_resource type="Script" path="res://Scenes/Levels/level.gd" id="1_424jw"]
[ext_resource type="Texture2D" uid="uid://d1hu45cxiqxle" path="res://Assets/Art/Backgrounds/bliss.png" id="2_xqnnn"]
[ext_resource type="Script" path="res://Scenes/Levels/BlastZone.gd" id="3_8ked8"]
[ext_resource type="FontFile" uid="uid://bawsclxchqpey" path="res://Resources/Fonts/IMPACTFUL.ttf" id="4_wqei5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nw5l"]
size = Vector2(146, 2826)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pye1"]
size = Vector2(153, 2860)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl1gh"]
size = Vector2(3906.5, 377)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ky0ef"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_v7t3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_143di"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.411765)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtn10"]
_data = {
"RESET": SubResource("Animation_v7t3t"),
"show": SubResource("Animation_143di")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_424jw")

[node name="TextureRect" type="Sprite2D" parent="."]
position = Vector2(1775.5, 1059.5)
scale = Vector2(4, 3)
texture = ExtResource("2_xqnnn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1230, 768)
anchor_mode = 0
zoom = Vector2(1.1, 1.1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(387.333, 246.667)
scale = Vector2(0.33, 0.33)
polygon = PackedVector2Array(-3, 360, 80.8081, 354.545, 196.97, 340.404, 361.333, 348, 582, 358, 778, 373, 1001, 397, 1296.97, 431.818, 1312.67, 675, -3, 649)

[node name="BlastZone" type="Area2D" parent="."]
script = ExtResource("3_8ked8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastZone"]
position = Vector2(1084, 781)
shape = SubResource("RectangleShape2D_2nw5l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BlastZone"]
position = Vector2(2477, 753)
shape = SubResource("RectangleShape2D_6pye1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BlastZone"]
position = Vector2(1816, 1905)
shape = SubResource("RectangleShape2D_sl1gh")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BlastZone"]
position = Vector2(2047, 498)
shape = SubResource("RectangleShape2D_sl1gh")

[node name="PlayerOneSpawn" type="Node2D" parent="."]
position = Vector2(1396, 928)

[node name="PlayerTwoSpawn" type="Node2D" parent="."]
position = Vector2(2127, 979)

[node name="PlayerWin" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="PlayerWin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ky0ef")

[node name="CenterContainer" type="CenterContainer" parent="PlayerWin/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerWin/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_wqei5")
theme_override_font_sizes/font_size = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerWin"]
libraries = {
"": SubResource("AnimationLibrary_qtn10")
}

[connection signal="body_entered" from="BlastZone" to="BlastZone" method="_on_body_entered"]
